# prosperity

./: .env.example  .gitignore  AGENTS.md  EXPLAIN.md  Makefile  README.md  RUN_BACKTEST.md  aditya.py  dashboard_server.py  discpuller.py  jinxingtest.py  new.md  prosperity_submission.py  prosperity_submission_fixed.py  pyproject.toml  round3_alpha_trader.py  round3_velvet_smile_alpha.py  run_backtest.py  submission_candidate.py  t.txt  velvetfruit_extract_trader.py
analysis/: round4_manual_derivatives.py  round4_order_flow_analysis.py
baselines/: __init__.py  baseline_wrappers.py
config/: loop.example.yaml  scoring.example.yaml  settings.example.yaml  sources.example.yaml
current_best_algo/: current_best_V1.py  current_best_V2.py
dashboard/: app.js  index.html  styles.css
docs/: ai_quant_loop.md  architecture.md  autoresearch.md  backtester_integration.md  compliance_and_source_policy.md  current_state_audit.md  dashboard.md  github_actions_autoresearch.md  loop_runtime.md  operator_runbook.md  portal_adapters.md  prompts_and_roles.md  strategy_dsl.md
other_strategies/: README.md  rank2.py  rank5.py  rank_01_pnl_666607_chennethelius_hybrid.py  rank_03_pnl_432562_5_fisjo_trader_round3_v2.py  rank_04_pnl_394048_5_fisjo_nftrader_round3_v5.py  ranked_results.csv  sbf-ftx-jinxing-v1.py  scan_report.md
outputs/: aggregate_summary.json  round_0_day_-1_equity_curve.csv  round_0_day_-1_fills.csv  round_0_day_-1_summary.json  round_0_day_-2_equity_curve.csv  round_0_day_-2_fills.csv  round_0_day_-2_summary.json  tutorial_equity_curve.csv  tutorial_fills.csv  (+1 more)
(+7574 files in other folders)
