[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosperity-research-platform"
version = "0.1.0"
description = "Local research platform for IMC Prosperity 4 strategy development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "torch>=2.1",
  "sympy>=1.12",
  "matplotlib>=3.8",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "tenacity>=8.2",
  "streamlit>=1.34",
  "openai>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]
portal = [
  "playwright>=1.45",
]

[project.scripts]
prosperity = "prosperity.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:dash"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
